<resources>
    <string name="app_name">Job Tracker</string>
    <string name="new_jobs">New Jobs</string>
    <string name="name_event">Title</string>
    <string name="update_date">Update date</string>
    <string name="description">Description</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="all_jobs">All Jobs</string>
    <string name="my_applications">My Applications</string>
    <string name="navigation_header">Navigation header</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="job_tracker">Job Tracker</string>
    <string-array name="status_array">
        <item>Pending</item>
        <item>In Process</item>
        <item>Rejected</item>
        <item>Accepted</item>
    </string-array>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="apply">Apply</string>
    <string name="job_id">Job Id</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="add_new_event">Add New Event</string>
    <string name="add">Add</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading...</string>
    <string name="pending">Pending</string>
    <string name="in_process">In Process</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="analysis">Analysis</string>
    <string name="_0">0</string>
    <string name="enter_email">Enter email</string>
    <string name="reset_password">Reset Password</string>
    <string name="about_us">About Us</string>
    <string name="job_description">Job Description</string>
    <string name="requirements">Requirements</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile_info">Profile Info</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome!</string>
    <string name="upload_your_cv">Upload your CV</string>
    <string name="pdf">PDF</string>
    <string name="word">WORD</string>
    <string name="returned">Returned</string>
    <string name="event">event</string>
    <string name="receiver_s_email_address">Receiver\'s Email Address!</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="compose_email">Compose Email</string>
    <string name="send">Send</string>
    <string name="attachment">attachment</string>
    <string name="she_returned_after_one_1">she returned after one 1</string>
</resources>