<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allJobs"
            android:icon="@drawable/ic_job"
            android:title="@string/all_jobs" />

        <item
            android:id="@+id/nav_myApplications"
            android:icon="@drawable/ic_employee"
            android:title="@string/my_applications" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/log_out" />

        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_chart_pie"
            android:title="@string/analysis" />

    </group>

</menu>