<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">
    <EditText
        android:id="@+id/apply_ET_reciver_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/receiver_s_email_address"
        android:inputType="textEmailAddress"
        android:singleLine="true" />
    <EditText
        android:id="@+id/apply_ET_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_subject"
        android:singleLine="true" />
    <EditText
        android:id="@+id/apply_ET_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:gravity="top|start"
        android:hint="@string/compose_email"
        android:inputType="textMultiLine" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_BTN_send"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/btn_color"
            android:textColor="@color/black"
            android:text="@string/send" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_BTN_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/btn_color"
            android:textColor="@color/black"
            android:text="@string/attachment" />
    </RelativeLayout>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/apply_tvAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_attachment"
        android:drawablePadding="2dp"
        android:visibility="gone"
         />
</LinearLayout>