<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Views.ActivityJob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="8">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="32dp"
            tools:text="Software developer"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@color/title_color"
            android:drawableStart="@drawable/ic_badge"
            android:drawablePadding="12dp"
            android:textSize="@dimen/data_text_size"
            tools:text="Intel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_full_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@color/title_color"
            android:drawableStart="@drawable/ic_briefcase"
            android:drawablePadding="12dp"
            android:textSize="@dimen/data_text_size"
            tools:text="Full Time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@color/title_color"
            android:drawableStart="@drawable/ic_marker"
            android:drawablePadding="12dp"
            android:textSize="@dimen/data_text_size"
            tools:text="Rishon Lezion, Israel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="12dp"
            android:text="@string/about_us"
            android:textStyle="bold"
            android:textSize="@dimen/data_text_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            tools:text="At [Company Name], we are committed to [brief company mission or value statement]. As a leader in [industry or field], our team is dedicated to [briefly describe company culture, achievements, or what sets it apart]. We believe in [key values or beliefs] and strive to [impact or goal]. Join us and be part of a dynamic team that’s shaping the future of [industry or specific area]."
            android:textSize="@dimen/data_text_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/job_description"
            android:textStyle="bold"
            android:textSize="@dimen/data_text_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            tools:text="We are seeking a motivated and skilled [Position Name] to join our [department or team name]. In this role, you will [briefly outline the main responsibilities]. You will work closely with [mention any departments or teams they will interact with] to [specific goals or tasks]. The ideal candidate will be [describe the type of person you’re looking for, including qualities or experiences]."
            android:textSize="@dimen/data_text_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_requirements_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/requirements"
            android:textStyle="bold"
            android:textSize="@dimen/data_text_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/job_description_LBL_requirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            tools:text="1.Education: [Degree or education level required, if any]\n
2.Experience: [Number of years of relevant experience, or specific experience required]\n
3.Skills: [Key skills or proficiencies needed, e.g., technical skills, software, etc.]\n
4.Certifications: [Any necessary certifications or licenses]\n
5.Personal Attributes: [Key personal attributes, e.g., strong communication skills, ability to work in a team, etc.]"
            android:textSize="@dimen/data_text_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/job_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:layout_marginTop="16dp"
            android:text="@string/apply"/>
    </LinearLayout>
</ScrollView>
